// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cards /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  margin: 0 calc(1.25rem * -1);
  padding: 0;
}

<div>
  <ul
    class="c0"
  />
</div>
`;

exports[`<Cards /> should render children 1`] = `
.c1 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 1.25rem;
  padding: 1rem;
  width: calc(100% / 3 - 2 * 1.25rem);
  list-style-type: none;
  background-color: white;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  margin: 0 calc(1.25rem * -1);
  padding: 0;
}

@media (max-width:980px) {
  .c1 {
    width: calc(100% / 2 - 2 * 1.25rem);
  }
}

@media (max-width:600px) {
  .c1 {
    width: calc(100% - 1 * 1.25rem);
  }
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      hello
    </li>
    <li
      class="c1"
    >
      world
    </li>
  </ul>
</div>
`;
